k8s/local/explorer-ui/testnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-explorer-ui-testnet
  namespace: chicmoz
spec:
  ingressClassName: nginx
  rules:
    - host: testnet.chicmoz.localhost
      http:
        paths:
          - backend:
              service:
                name: explorer-ui-testnet-service
                port:
                  name: http-app
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
